# Render_Project

./: .gitignore  README.md  Render_Project - 바로 가기.lnk  Render_Project.sln  Render_Project.vcxproj  Render_Project.vcxproj.filters  results_PathTracing.xlsx  results_v0.2.xlsx  test.cpp
PathTracing/: BVH.cpp  Bounds3.hpp  Material.hpp  Renderer.cpp  Scene.cpp  Scene.hpp  Sphere.hpp  Triangle.hpp  main.cpp  main.h
PathTracing/models/BMW M8 Competition Widebody/: M8C.mtl
PathTracing_CUDA/src/: AreaLight.h  Global.h  MeshTriangle.h  Ray.h  Renderer.cu  Renderer.h  main.cpp
PathTracing_CUDA/stroed/: BVH.hpp  Bounds3.hpp  CMakeLists.txt  CUDA_Function.cu  Renderer.cpp  Renderer.hpp  Triangle.hpp  global.hpp
include/: InputControl.h  Light.h  Materials.h  camera.h  shader.h
include/Mesh/: Mesh.h  Model.h
include/glad/: glad.h
lib/: assimp-vc143-mtd.exp
resources/: Render_Project - 바로 가기.lnk
shader/: 1.model_loading.fs  3.3.shader.fs  3.3.shader.vs  4.1.texture.fs  4.1.texture.vs  8.light.fs  8.light.vs  8.whiteLight.fs  bugatti.fs
src/: 1.cpp  2.cpp  3.cpp  4.cpp  5.cpp  Light.cpp  glad.c  shader.cpp
src/Mesh/: Mesh.cpp  Model.cpp
